# hh_parser_with_database

./: README.md  pyproject.toml
src/: api.py  db_manager.py  main.py  queries.sql  utils.py
tests/: test_api.py
