[tool.poetry]
name = "hh-database"
version = "0.1.0"
description = ""
authors = ["Uliana Semyonova <i@ulianasemyonova.ru>"]
readme = "README.md"
packages = [{include = "hh_database"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.6"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
